--- a/Simply add a license.csproj
+++ b/Simply add a license.csproj
@@ -1639,6 +1639,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Commands\Window.resx">
       <DependentUpon>Window.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
